// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration createConnect correctly connects action creators to props 1`] = `
<body>
  <div>
    <div>
      Count: 
      <span>
        2
      </span>
      <button>
        increment
      </button>
    </div>
  </div>
</body>
`;

exports[`integration createConnect correctly connects state and dispatch to props 1`] = `
<body>
  <div>
    <div>
      Count: 
      <span>
        2
      </span>
      <button>
        increment
      </button>
    </div>
  </div>
</body>
`;

exports[`integration createConnect correctly uses mergeProps function 1`] = `
<body>
  <div>
    <div>
      Count: 
      <span>
        Replaces count with a static value
      </span>
      <button>
        increment
      </button>
    </div>
  </div>
</body>
`;

exports[`integration createConnect works with no connection arguments supplied 1`] = `
<body>
  <div>
    <div>
      Count: 
      <span />
      <button
        disabled=""
      >
        increment
      </button>
    </div>
  </div>
</body>
`;

exports[`integration createContext renders with root provider and updates on action dispatch 1`] = `
<body>
  <div>
    <div>
      Count: 
      <span>
        2
      </span>
      <button>
        increment
      </button>
    </div>
  </div>
</body>
`;

exports[`integration createContext renders without root provider 1`] = `
<body>
  <div>
    <div>
      Count: 
      <span>
        0
      </span>
      <button
        disabled=""
      >
        increment
      </button>
    </div>
  </div>
</body>
`;
